syntax = "proto3";

// #SPC-markets-events-proto
package orca.events;

import "orca/markets/markets.proto";

// History log event.
message LogEvent {
  oneof event {
    // Order book change.
    orca.markets.Order order = 1;
    // Currency trade.
    orca.markets.Trade trade = 2;
    // Entire order book reset.
    orca.markets.OrderBook book = 3;
  }
}

// History log entry.
message LogBody {
  // List of events on current timestamp.
  repeated LogEvent events = 1;

  // Optional: UNIX timestamp of events.
  // When this is set events can be empty.
  // This indicates a heartbeat event.
  int64 timestamp = 2;
}
